--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~11.2.9",
     "@angular/platform-browser-dynamic": "~11.2.9",
     "@angular/router": "~11.2.9",
+    "@types/axios": "^0.14.0",
     "axios": "^0.21.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
